--- a/src/app/style/buttons.scss
+++ b/src/app/style/buttons.scss
@@ -16,3 +16,17 @@
         padding: 0;
     }
 }
+
+.facebook-login-button {
+    width: 66.5px;
+    height: 22px;
+    border: 1px solid white;
+    color: white; 
+    border-radius: 4px; 
+    line-height: 16px;
+    text-align: center;
+    font-size: 9px; 
+    cursor: pointer;
+    background: $primary;
+
+}
